优化：优化和调整布局 - 重构统一化消息源 - 优化使消息的上下最外层边距遵循“消息组间距” - 优化表情面板，使其基于统一参数 - 优化命令提示位置，使其跟随输入位置 - 在非接管模式下添加聊天设置按钮 - 修复多媒体消息卡片缺失的消息背景 - 修复“仅首行头像”导致的缩进问题