@@ -1,6 +1,9 @@
 package com.chat.upgrade.client.ui.chat.input;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
+import java.util.Objects;
 
 import org.jetbrains.annotations.Nullable;
 
@@ -8,7 +11,13 @@ import com.chat.upgrade.client.emoji.EmojiCatalog;
 import com.chat.upgrade.client.emoji.TwikooOwoRegistry;
 import com.chat.upgrade.client.media.image.ImageEntry;
 import com.chat.upgrade.client.media.image.ImageLoader;
+import com.chat.upgrade.client.ui.chat.surface.ChatAppearanceRuntime;
+import com.chat.upgrade.client.ui.chat.surface.ChatAppearanceSnapshot;
+import com.chat.upgrade.client.ui.chat.surface.ChatSurfaceController;
+import com.chat.upgrade.client.ui.chat.viewport.RichChatBounds;
+import com.chat.upgrade.client.ui.render.UiPrimitives;
 
+import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.client.input.MouseButtonEvent;
@@ -19,24 +28,27 @@ import net.minecraft.util.ARGB;
 import net.minecraft.util.Util;
 
 public final class EmojiPickerPopover {
-    private static final int PANEL_W = 300;
-    private static final int PANEL_H = 172;
-    private static final int PAD = 6;
-    private static final int TAB_H = 20;
-    private static final int SEARCH_H = 18;
-    private static final int CELL = 24;
-    private static final int GAP = 4;
-    private static final int PREVIEW_W = 76;
-    private static final int PREVIEW_H = 84;
-    private static final int PREVIEW_IMAGE = 48;
+    private static final int SCREEN_MARGIN = 4;
+    private static final int BASE_PANEL_WIDTH = 300;
+    private static final int BASE_PANEL_HEIGHT = 172;
+    private static final int BASE_MIN_PANEL_WIDTH = 160;
+    private static final int BASE_MIN_PANEL_HEIGHT = 112;
+    private static final int BASE_PADDING = 6;
+    private static final int BASE_TAB_HEIGHT = 20;
+    private static final int BASE_SEARCH_HEIGHT = 18;
+    private static final int BASE_CELL_SIZE = 24;
+    private static final int BASE_GAP = 4;
+    private static final int BASE_PREVIEW_WIDTH = 76;
+    private static final int BASE_PREVIEW_HEIGHT = 84;
+    private static final int BASE_PREVIEW_IMAGE_SIZE = 48;
 
-    private boolean visible = false;
-    private double gridScrollY = 0.0D;
-    private double groupScrollX = 0.0D;
+    private boolean visible;
+    private double gridScrollY;
+    private double groupScrollX;
     private @Nullable String selectedGroupId;
     private @Nullable EmojiCatalog.Item hoveredItem;
     private String searchQuery = "";
-    private final List<String> recentTokens = new java.util.ArrayList<>();
+    private final List<String> recentTokens = new ArrayList<>();
 
     public String searchQuery() {
         return searchQuery;
@@ -47,6 +59,7 @@ public final class EmojiPickerPopover {
         if (!normalized.equals(searchQuery)) {
             searchQuery = normalized;
             gridScrollY = 0.0D;
+            groupScrollX = 0.0D;
         }
     }
 
@@ -54,17 +67,26 @@ public final class EmojiPickerPopover {
         setSearchQuery("");
     }
 
-    public boolean isSearchFocused(double mouseX, double mouseY, int screenWidth, int screenHeight,
-            int anchorX, int anchorY, int anchorWidth) {
-        Layout layout = layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth);
-        return inside(mouseX, mouseY, layout.searchX0, layout.searchY0, layout.searchX1, layout.searchY1);
+    public boolean isSearchFocused(
+            double mouseX,
+            double mouseY,
+            int screenWidth,
+            int screenHeight,
+            int anchorX,
+            int anchorY,
+            int anchorWidth) {
+        return layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth)
+                .searchBounds()
+                .contains((int) Math.round(mouseX), (int) Math.round(mouseY));
     }
 
-    public com.chat.upgrade.client.ui.chat.viewport.RichChatBounds searchBounds(
-            int screenWidth, int screenHeight, int anchorX, int anchorY, int anchorWidth) {
-        Layout layout = layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth);
-        return com.chat.upgrade.client.ui.chat.viewport.RichChatBounds.ofSize(
-                layout.searchX0, layout.searchY0, layout.searchX1 - layout.searchX0, layout.searchY1 - layout.searchY0);
+    public RichChatBounds searchBounds(
+            int screenWidth,
+            int screenHeight,
+            int anchorX,
+            int anchorY,
+            int anchorWidth) {
+        return layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth).searchBounds();
     }
 
     public void remember(EmojiCatalog.Item item) {
@@ -72,7 +94,7 @@ public final class EmojiPickerPopover {
             return;
         }
         recentTokens.remove(item.token());
-        recentTokens.add(0, item.token());
+        recentTokens.addFirst(item.token());
         while (recentTokens.size() > 24) {
             recentTokens.removeLast();
         }
@@ -103,9 +125,9 @@ public final class EmojiPickerPopover {
     public void toggle() {
         if (visible) {
             close();
-            return;
+        } else {
+            open();
         }
-        open();
     }
 
     public void open() {
@@ -119,7 +141,7 @@ public final class EmojiPickerPopover {
     }
 
     public void render(
-            GuiGraphicsExtractor gfx,
+            GuiGraphicsExtractor graphics,
             Font font,
             int mouseX,
             int mouseY,
@@ -128,35 +150,46 @@ public final class EmojiPickerPopover {
             int anchorX,
             int anchorY,
             int anchorWidth) {
-        if (!visible) {
+        if (!visible || graphics == null || font == null) {
             return;
         }
         EmojiCatalog catalog = TwikooOwoRegistry.catalog();
         Layout layout = layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth);
+        ChatAppearanceSnapshot appearance = layout.appearance();
+        Density density = layout.density();
         hoveredItem = null;
 
-        gfx.fill(layout.x0, layout.y0, layout.x1, layout.y1, 0xF018202B);
-        gfx.outline(layout.x0, layout.y0, layout.w, layout.h, 0xFF425066);
-        gfx.fill(layout.searchX0, layout.searchY0, layout.searchX1, layout.searchY1, 0xFF141A22);
-        gfx.outline(layout.searchX0, layout.searchY0, layout.searchX1 - layout.searchX0,
-                layout.searchY1 - layout.searchY0, 0xFF3A4456);
+        UiPrimitives.paintBox(
+                graphics,
+                layout.panelBounds(),
+                density.radius(),
+                density.borderWidth(),
+                appearance.contextMenu().background(),
+                appearance.contextMenu().border());
+        UiPrimitives.paintBox(
+                graphics,
+                layout.searchBounds(),
+                density.radius(),
+                density.borderWidth(),
+                appearance.media().controlBackground(),
+                appearance.contextMenu().border());
 
         if (catalog.isEmpty()) {
-            gfx.centeredText(
+            graphics.centeredText(
                     font,
                     I18n.get("chatupgrade.emoji.picker.loading_or_empty"),
-                    layout.x0 + layout.w / 2,
-                    layout.y0 + layout.h / 2 - 4,
-                    0xFFCAD2DD);
+                    layout.panelBounds().left() + layout.panelBounds().width() / 2,
+                    layout.panelBounds().top() + layout.panelBounds().height() / 2 - font.lineHeight / 2,
+                    appearance.surface().muted());
             return;
         }
 
-        EmojiCatalog.Group group = selectedGroup(catalog);
+        EmojiCatalog.Group selected = selectedGroup(catalog);
         List<EmojiCatalog.Group> groups = displayGroups(catalog);
-        renderGroups(gfx, font, groups, group, mouseX, mouseY, layout);
-        renderGrid(gfx, font, group, mouseX, mouseY, layout);
-        if (hoveredItem != null) {
-            renderPreview(gfx, font, hoveredItem, screenWidth, layout);
+        renderGroups(graphics, font, groups, selected, mouseX, mouseY, layout);
+        renderGrid(graphics, font, selected, mouseX, mouseY, layout);
+        if (hoveredItem != null && layout.previewBounds().width() > 0) {
+            renderPreview(graphics, font, hoveredItem, layout);
         }
     }
 
@@ -170,14 +203,18 @@ public final class EmojiPickerPopover {
         if (!visible || event.button() != 0) {
             return ClickResult.unhandled();
         }
-        EmojiCatalog catalog = TwikooOwoRegistry.catalog();
         Layout layout = layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth);
-        if (!inside(event.x(), event.y(), layout.x0, layout.y0, layout.x1, layout.y1)) {
+        if (!UiPrimitives.containsRounded(
+                layout.panelBounds(),
+                (int) Math.round(event.x()),
+                (int) Math.round(event.y()),
+                layout.density().radius())) {
             return ClickResult.outside();
         }
-        if (inside(event.x(), event.y(), layout.searchX0, layout.searchY0, layout.searchX1, layout.searchY1)) {
+        if (layout.searchBounds().contains((int) Math.round(event.x()), (int) Math.round(event.y()))) {
             return ClickResult.consumed();
         }
+        EmojiCatalog catalog = TwikooOwoRegistry.catalog();
         if (catalog.isEmpty()) {
             return ClickResult.consumed();
         }
@@ -211,201 +248,325 @@ public final class EmojiPickerPopover {
         }
         EmojiCatalog catalog = TwikooOwoRegistry.catalog();
         Layout layout = layout(screenWidth, screenHeight, anchorX, anchorY, anchorWidth);
-        if (!inside(mouseX, mouseY, layout.x0, layout.y0, layout.x1, layout.y1)) {
+        if (!UiPrimitives.containsRounded(
+                layout.panelBounds(),
+                (int) Math.round(mouseX),
+                (int) Math.round(mouseY),
+                layout.density().radius())) {
             return false;
         }
-        if (inside(mouseX, mouseY, layout.searchX0, layout.searchY0, layout.searchX1, layout.searchY1)) {
+        if (layout.searchBounds().contains((int) Math.round(mouseX), (int) Math.round(mouseY))) {
             return true;
         }
-        if (inside(mouseX, mouseY, layout.tabX0, layout.tabY0, layout.tabX1, layout.tabY1)) {
-            groupScrollX = clamp(groupScrollX - scrollY * 28.0D, 0.0D, maxGroupScroll(displayGroups(catalog), layout));
+        if (layout.tabBounds().contains((int) Math.round(mouseX), (int) Math.round(mouseY))) {
+            groupScrollX = clamp(
+                    groupScrollX - scrollY * layout.density().tabScrollStep(),
+                    0.0D,
+                    maxGroupScroll(displayGroups(catalog), layout));
             return true;
         }
         EmojiCatalog.Group group = selectedGroup(catalog);
-        gridScrollY = clamp(gridScrollY - scrollY * 18.0D, 0.0D, maxGridScroll(group, layout));
+        gridScrollY = clamp(
+                gridScrollY - scrollY * layout.density().gridScrollStep(),
+                0.0D,
+                maxGridScroll(group, layout));
         return true;
     }
 
     private void renderGroups(
-            GuiGraphicsExtractor gfx,
+            GuiGraphicsExtractor graphics,
             Font font,
             List<EmojiCatalog.Group> groups,
             EmojiCatalog.Group selected,
             int mouseX,
             int mouseY,
             Layout layout) {
-        gfx.fill(layout.tabX0, layout.tabY0, layout.tabX1, layout.tabY1, 0xFF1F2A38);
-        int cursor = layout.tabX0 - (int) Math.round(groupScrollX);
-        for (EmojiCatalog.Group group : groups) {
-            int tabW = tabWidth(font, group);
-            int x0 = cursor;
-            int x1 = cursor + tabW;
-            cursor = x1 + GAP;
-            if (x1 <= layout.tabX0 || x0 >= layout.tabX1) {
-                continue;
+        Density density = layout.density();
+        ChatAppearanceSnapshot appearance = layout.appearance();
+        RichChatBounds tabs = layout.tabBounds();
+        UiPrimitives.fillRounded(
+                graphics,
+                tabs,
+                density.radius(),
+                appearance.media().controlBackground());
+        groupScrollX = clamp(groupScrollX, 0.0D, maxGroupScroll(groups, layout));
+        int cursor = tabs.left() - (int) Math.round(groupScrollX);
+        graphics.enableScissor(tabs.left(), tabs.top(), tabs.right(), tabs.bottom());
+        try {
+            for (EmojiCatalog.Group group : groups) {
+                int tabWidth = tabWidth(font, group, density);
+                RichChatBounds tab = RichChatBounds.ofSize(cursor, tabs.top(), tabWidth, tabs.height());
+                cursor = tab.right() + density.gap();
+                if (tab.right() <= tabs.left() || tab.left() >= tabs.right()) {
+                    continue;
+                }
+                boolean active = group.id().equals(selected.id());
+                boolean hover = tab.contains(mouseX, mouseY);
+                int background = active || hover
+                        ? appearance.media().controlActiveBackground()
+                        : appearance.media().controlBackground();
+                UiPrimitives.fillRounded(graphics, tab, density.radius(), background);
+                String name = trim(font, group.name(), Math.max(1, tab.width() - density.tabTextPadding() * 2));
+                graphics.text(
+                        font,
+                        name,
+                        tab.left() + density.tabTextPadding(),
+                        tab.top() + Math.max(1, (tab.height() - font.lineHeight) / 2),
+                        active ? appearance.surface().title() : appearance.surface().muted(),
+                        false);
             }
-            boolean active = group.id().equals(selected.id());
-            int visibleX0 = Math.max(x0, layout.tabX0);
-            int visibleX1 = Math.min(x1, layout.tabX1);
-            boolean hover = inside(mouseX, mouseY, visibleX0, layout.tabY0, visibleX1, layout.tabY1);
-            int bg = active ? 0xFF4C6284 : hover ? 0xFF334155 : 0xFF2A3545;
-            gfx.fill(visibleX0, layout.tabY0, visibleX1, layout.tabY1, bg);
-            int textX = visibleX0 + 5;
-            int textMaxWidth = visibleX1 - textX - 5;
-            if (textMaxWidth > 0) {
-                String name = trim(font, group.name(), textMaxWidth);
-                gfx.text(font, name, textX, layout.tabY0 + 6, active ? 0xFFFFFFFF : 0xFFCAD2DD, false);
-            }
+        } finally {
+            graphics.disableScissor();
         }
     }
 
     private void renderGrid(
-            GuiGraphicsExtractor gfx,
+            GuiGraphicsExtractor graphics,
             Font font,
             EmojiCatalog.Group group,
             int mouseX,
             int mouseY,
             Layout layout) {
+        ChatAppearanceSnapshot appearance = layout.appearance();
+        Density density = layout.density();
+        RichChatBounds grid = layout.gridBounds();
+        UiPrimitives.fillRounded(
+                graphics,
+                grid,
+                density.radius(),
+                appearance.media().pendingBackground());
         List<EmojiCatalog.Item> items = group.items();
         if (items.isEmpty()) {
-            gfx.centeredText(
+            graphics.centeredText(
                     font,
                     I18n.get("chatupgrade.emoji.picker.empty_group"),
-                    layout.gridX0 + layout.gridW / 2,
-                    layout.gridY0 + layout.gridH / 2 - 4,
-                    0xFFCAD2DD);
+                    grid.left() + grid.width() / 2,
+                    grid.top() + grid.height() / 2 - font.lineHeight / 2,
+                    appearance.surface().muted());
             return;
         }
+
         gridScrollY = clamp(gridScrollY, 0.0D, maxGridScroll(group, layout));
         int columns = columns(layout);
-        int rowStep = CELL + GAP;
+        int rowStep = density.rowStep();
         int firstRow = Math.max(0, (int) Math.floor(gridScrollY / rowStep));
-        int lastRow = Math.min((items.size() + columns - 1) / columns, firstRow + layout.gridH / rowStep + 3);
+        int rowCount = (items.size() + columns - 1) / columns;
+        int lastRow = Math.min(rowCount, firstRow + grid.height() / rowStep + 3);
         int offsetY = (int) Math.round(gridScrollY - firstRow * rowStep);
 
-        gfx.fill(layout.gridX0, layout.gridY0, layout.gridX1, layout.gridY1, 0xFF141A22);
-        for (int row = firstRow; row < lastRow; row++) {
-            int y0 = layout.gridY0 + (row - firstRow) * rowStep - offsetY;
-            if (y0 < layout.gridY0 || y0 + CELL > layout.gridY1) {
-                continue;
-            }
-            for (int col = 0; col < columns; col++) {
-                int index = row * columns + col;
-                if (index >= items.size()) {
-                    return;
+        graphics.enableScissor(grid.left(), grid.top(), grid.right(), grid.bottom());
+        try {
+            for (int row = firstRow; row < lastRow; row++) {
+                int itemY = grid.top() + (row - firstRow) * rowStep - offsetY;
+                for (int column = 0; column < columns; column++) {
+                    int index = row * columns + column;
+                    if (index >= items.size()) {
+                        break;
+                    }
+                    int itemX = grid.left() + column * rowStep;
+                    RichChatBounds itemBounds = RichChatBounds.ofSize(
+                            itemX,
+                            itemY,
+                            density.cellSize(),
+                            density.cellSize());
+                    if (itemBounds.bottom() <= grid.top() || itemBounds.top() >= grid.bottom()) {
+                        continue;
+                    }
+                    EmojiCatalog.Item item = items.get(index);
+                    boolean hover = itemBounds.contains(mouseX, mouseY);
+                    if (hover) {
+                        hoveredItem = item;
+                    }
+                    renderItem(graphics, font, item, itemBounds, hover, layout);
                 }
-                int x0 = layout.gridX0 + col * rowStep;
-                EmojiCatalog.Item item = items.get(index);
-                boolean hover = inside(mouseX, mouseY, x0, y0, x0 + CELL, y0 + CELL);
-                if (hover) {
-                    hoveredItem = item;
-                }
-                renderItem(gfx, font, item, x0, y0, CELL, hover);
             }
+        } finally {
+            graphics.disableScissor();
         }
-        renderScrollBar(gfx, group, layout);
+        renderScrollBar(graphics, group, layout);
     }
 
     private void renderItem(
-            GuiGraphicsExtractor gfx,
+            GuiGraphicsExtractor graphics,
             Font font,
             EmojiCatalog.Item item,
-            int x,
-            int y,
-            int size,
-            boolean hover) {
-        gfx.fill(x, y, x + size, y + size, hover ? 0xFF334155 : 0xFF202A36);
-        gfx.outline(x, y, size, size, hover ? 0xFF7DB5FF : 0xFF3A4456);
+            RichChatBounds bounds,
+            boolean hover,
+            Layout layout) {
+        ChatAppearanceSnapshot appearance = layout.appearance();
+        Density density = layout.density();
+        UiPrimitives.paintBox(
+                graphics,
+                bounds,
+                density.radius(),
+                density.itemBorderWidth(),
+                hover ? appearance.media().controlActiveBackground() : appearance.media().controlBackground(),
+                hover ? appearance.message().systemBorder() : appearance.contextMenu().border());
+
+        int imageInset = density.imageInset();
+        RichChatBounds imageBounds = RichChatBounds.ofSize(
+                bounds.left() + imageInset,
+                bounds.top() + imageInset,
+                Math.max(1, bounds.width() - imageInset * 2),
+                Math.max(1, bounds.height() - imageInset * 2));
         ImageEntry entry = ImageLoader.getOrLoad(item.loaderUrl());
-        int imageSize = size - 6;
-        int imageX = x + 3;
-        int imageY = y + 3;
         switch (entry.getState()) {
-            case FAILED -> gfx.centeredText(font, "?", x + size / 2, y + 8, 0xFFFF9090);
-            case LOADING -> gfx.fill(imageX, imageY, imageX + imageSize, imageY + imageSize, 0xFF2F3846);
-            case LOADED -> blitImage(gfx, entry, imageX, imageY, imageSize, 1.0F);
+            case FAILED -> graphics.centeredText(
+                    font,
+                    "?",
+                    bounds.left() + bounds.width() / 2,
+                    bounds.top() + Math.max(1, (bounds.height() - font.lineHeight) / 2),
+                    appearance.media().failureText());
+            case LOADING -> UiPrimitives.fillRounded(
+                    graphics,
+                    imageBounds,
+                    density.radius(),
+                    appearance.media().emojiLoadingBackground());
+            case LOADED -> UiPrimitives.withRoundedClip(
+                    graphics,
+                    imageBounds,
+                    density.radius(),
+                    () -> blitImage(graphics, entry, imageBounds.left(), imageBounds.top(), imageBounds.width(), 1.0F));
         }
     }
 
     private void renderPreview(
-            GuiGraphicsExtractor gfx,
+            GuiGraphicsExtractor graphics,
             Font font,
             EmojiCatalog.Item item,
-            int screenWidth,
             Layout layout) {
-        int x0 = layout.x1 + GAP;
-        if (x0 + PREVIEW_W > screenWidth - 2) {
-            x0 = Math.max(2, layout.x0 - PREVIEW_W - GAP);
-        }
-        int y0 = layout.y0;
-        int x1 = x0 + PREVIEW_W;
-        int y1 = y0 + PREVIEW_H;
-        gfx.fill(x0, y0, x1, y1, 0xF01A212C);
-        gfx.outline(x0, y0, PREVIEW_W, PREVIEW_H, 0xFF5A6B84);
+        ChatAppearanceSnapshot appearance = layout.appearance();
+        Density density = layout.density();
+        RichChatBounds preview = layout.previewBounds();
+        UiPrimitives.paintBox(
+                graphics,
+                preview,
+                density.radius(),
+                density.borderWidth(),
+                appearance.contextMenu().background(),
+                appearance.contextMenu().border());
+
+        int imageSize = Math.max(
+                1,
+                Math.min(
+                        density.previewImageSize(),
+                        Math.min(
+                                preview.width() - density.padding() * 2,
+                                preview.height() - density.padding() * 2 - font.lineHeight)));
+        RichChatBounds imageBounds = RichChatBounds.ofSize(
+                preview.left() + (preview.width() - imageSize) / 2,
+                preview.top() + density.padding(),
+                imageSize,
+                imageSize);
         ImageEntry entry = ImageLoader.getOrLoad(item.loaderUrl());
-        int imageX = x0 + (PREVIEW_W - PREVIEW_IMAGE) / 2;
-        int imageY = y0 + 8;
         switch (entry.getState()) {
-            case FAILED -> gfx.centeredText(font, I18n.get("chatupgrade.emoji.picker.failed"), x0 + PREVIEW_W / 2, imageY + 18, 0xFFFF9090);
+            case FAILED -> graphics.centeredText(
+                    font,
+                    I18n.get("chatupgrade.emoji.picker.failed"),
+                    preview.left() + preview.width() / 2,
+                    imageBounds.top() + Math.max(1, (imageBounds.height() - font.lineHeight) / 2),
+                    appearance.media().failureText());
             case LOADING -> {
-                gfx.fill(imageX, imageY, imageX + PREVIEW_IMAGE, imageY + PREVIEW_IMAGE, 0xFF2F3846);
-                gfx.centeredText(font, "...", x0 + PREVIEW_W / 2, imageY + 20, 0xFFCAD2DD);
+                UiPrimitives.fillRounded(
+                        graphics,
+                        imageBounds,
+                        density.radius(),
+                        appearance.media().emojiLoadingBackground());
+                graphics.centeredText(
+                        font,
+                        "...",
+                        preview.left() + preview.width() / 2,
+                        imageBounds.top() + Math.max(1, (imageBounds.height() - font.lineHeight) / 2),
+                        appearance.surface().muted());
             }
-            case LOADED -> blitImage(gfx, entry, imageX, imageY, PREVIEW_IMAGE, 1.0F);
+            case LOADED -> UiPrimitives.withRoundedClip(
+                    graphics,
+                    imageBounds,
+                    density.radius(),
+                    () -> blitImage(graphics, entry, imageBounds.left(), imageBounds.top(), imageSize, 1.0F));
         }
-        gfx.centeredText(font, trim(font, item.token(), PREVIEW_W - 8), x0 + PREVIEW_W / 2, y0 + 62, 0xFFE7ECF4);
+        graphics.centeredText(
+                font,
+                trim(font, item.token(), Math.max(1, preview.width() - density.padding() * 2)),
+                preview.left() + preview.width() / 2,
+                preview.bottom() - density.padding() - font.lineHeight,
+                appearance.surface().title());
     }
 
-    private void renderScrollBar(GuiGraphicsExtractor gfx, EmojiCatalog.Group group, Layout layout) {
-        double max = maxGridScroll(group, layout);
-        if (max <= 0.0D) {
+    private void renderScrollBar(
+            GuiGraphicsExtractor graphics,
+            EmojiCatalog.Group group,
+            Layout layout) {
+        double maxScroll = maxGridScroll(group, layout);
+        if (maxScroll <= 0.0D) {
             return;
         }
-        int barX = layout.gridX1 - 3;
-        int trackY0 = layout.gridY0 + 2;
-        int trackH = Math.max(1, layout.gridH - 4);
-        int contentH = rows(group, layout) * (CELL + GAP);
-        int thumbH = Math.clamp((int) Math.round(trackH * (layout.gridH / (double) Math.max(layout.gridH, contentH))), 14, trackH);
-        int thumbY = trackY0 + (int) Math.round((trackH - thumbH) * (gridScrollY / max));
-        gfx.fill(barX, trackY0, barX + 2, trackY0 + trackH, 0xFF263241);
-        gfx.fill(barX, thumbY, barX + 2, thumbY + thumbH, 0xFF7D8EA6);
+        Density density = layout.density();
+        RichChatBounds grid = layout.gridBounds();
+        int trackHeight = Math.max(1, grid.height() - density.scrollbarInset() * 2);
+        int contentHeight = rows(group, layout) * density.rowStep() - density.gap();
+        int thumbHeight = Math.clamp(
+                (int) Math.round(trackHeight * (grid.height() / (double) Math.max(grid.height(), contentHeight))),
+                Math.min(density.minimumThumbHeight(), trackHeight),
+                trackHeight);
+        int trackX = grid.right() - density.scrollbarInset() - density.scrollbarWidth();
+        int trackTop = grid.top() + density.scrollbarInset();
+        RichChatBounds track = RichChatBounds.ofSize(
+                trackX,
+                trackTop,
+                density.scrollbarWidth(),
+                trackHeight);
+        int thumbTop = trackTop + (int) Math.round((trackHeight - thumbHeight) * (gridScrollY / maxScroll));
+        RichChatBounds thumb = RichChatBounds.ofSize(trackX, thumbTop, density.scrollbarWidth(), thumbHeight);
+        UiPrimitives.fillRounded(graphics, track, density.scrollbarWidth() / 2, layout.appearance().scrollbar().track());
+        UiPrimitives.fillRounded(graphics, thumb, density.scrollbarWidth() / 2, layout.appearance().scrollbar().thumb());
     }
 
-    private @Nullable String hitGroup(List<EmojiCatalog.Group> groups, double mouseX, double mouseY, Layout layout) {
-        if (!inside(mouseX, mouseY, layout.tabX0, layout.tabY0, layout.tabX1, layout.tabY1)) {
+    private @Nullable String hitGroup(
+            List<EmojiCatalog.Group> groups,
+            double mouseX,
+            double mouseY,
+            Layout layout) {
+        RichChatBounds tabs = layout.tabBounds();
+        if (!tabs.contains((int) Math.round(mouseX), (int) Math.round(mouseY))) {
             return null;
         }
-        Font font = net.minecraft.client.Minecraft.getInstance().font;
-        int cursor = layout.tabX0 - (int) Math.round(groupScrollX);
+        Font font = Minecraft.getInstance().font;
+        int cursor = tabs.left() - (int) Math.round(groupScrollX);
         for (EmojiCatalog.Group group : groups) {
-            int tabW = tabWidth(font, group);
-            int x0 = cursor;
-            int x1 = cursor + tabW;
-            cursor = x1 + GAP;
-            if (inside(mouseX, mouseY, x0, layout.tabY0, x1, layout.tabY1)) {
+            int width = tabWidth(font, group, layout.density());
+            RichChatBounds tab = RichChatBounds.ofSize(cursor, tabs.top(), width, tabs.height());
+            cursor = tab.right() + layout.density().gap();
+            if (tab.contains((int) Math.round(mouseX), (int) Math.round(mouseY))) {
                 return group.id();
             }
         }
         return null;
     }
 
-    private @Nullable EmojiCatalog.Item hitItem(EmojiCatalog.Group group, double mouseX, double mouseY, Layout layout) {
-        if (!inside(mouseX, mouseY, layout.gridX0, layout.gridY0, layout.gridX1, layout.gridY1)) {
+    private @Nullable EmojiCatalog.Item hitItem(
+            EmojiCatalog.Group group,
+            double mouseX,
+            double mouseY,
+            Layout layout) {
+        RichChatBounds grid = layout.gridBounds();
+        if (!grid.contains((int) Math.round(mouseX), (int) Math.round(mouseY))) {
             return null;
         }
-        List<EmojiCatalog.Item> items = group.items();
-        int columns = columns(layout);
-        int rowStep = CELL + GAP;
-        int localX = (int) Math.floor(mouseX) - layout.gridX0;
-        int localY = (int) Math.floor(mouseY) - layout.gridY0 + (int) Math.round(gridScrollY);
-        int col = localX / rowStep;
+        Density density = layout.density();
+        int rowStep = density.rowStep();
+        int localX = (int) Math.floor(mouseX) - grid.left();
+        int localY = (int) Math.floor(mouseY) - grid.top() + (int) Math.round(gridScrollY);
+        int column = localX / rowStep;
         int row = localY / rowStep;
         int cellX = localX % rowStep;
         int cellY = localY % rowStep;
-        if (col < 0 || col >= columns || cellX >= CELL || cellY >= CELL) {
+        int columns = columns(layout);
+        if (column < 0 || column >= columns || cellX >= density.cellSize() || cellY >= density.cellSize()) {
             return null;
         }
-        int index = row * columns + col;
+        int index = row * columns + column;
+        List<EmojiCatalog.Item> items = group.items();
         return index >= 0 && index < items.size() ? items.get(index) : null;
     }
 
@@ -431,32 +592,46 @@ public final class EmojiPickerPopover {
                 .flatMap(group -> group.items().stream())
                 .toList();
         if (!searchQuery.isBlank()) {
-            String query = searchQuery.toLowerCase(java.util.Locale.ROOT);
+            String query = searchQuery.toLowerCase(Locale.ROOT);
             List<EmojiCatalog.Item> matches = allItems.stream()
-                    .filter(item -> item.token().toLowerCase(java.util.Locale.ROOT).contains(query))
+                    .filter(item -> item.token().toLowerCase(Locale.ROOT).contains(query))
                     .toList();
-            return List.of(new EmojiCatalog.Group("search", I18n.get("chatupgrade.emoji.picker.search"), matches));
+            return List.of(new EmojiCatalog.Group(
+                    "search",
+                    I18n.get("chatupgrade.emoji.picker.search"),
+                    matches));
         }
-        List<EmojiCatalog.Group> groups = new java.util.ArrayList<>();
+        List<EmojiCatalog.Group> groups = new ArrayList<>();
         if (!recentTokens.isEmpty()) {
             List<EmojiCatalog.Item> recent = recentTokens.stream()
                     .map(catalog::itemByToken)
-                    .filter(java.util.Objects::nonNull)
+                    .filter(Objects::nonNull)
                     .toList();
             if (!recent.isEmpty()) {
-                groups.add(new EmojiCatalog.Group("recent", I18n.get("chatupgrade.emoji.picker.recent"), recent));
+                groups.add(new EmojiCatalog.Group(
+                        "recent",
+                        I18n.get("chatupgrade.emoji.picker.recent"),
+                        recent));
             }
         }
         groups.addAll(catalog.groups());
         return List.copyOf(groups);
     }
 
-    private void blitImage(GuiGraphicsExtractor gfx, ImageEntry entry, int x, int y, int size, float opacity) {
-        Identifier textureId = entry.isAnimated() ? entry.textureIdAtMillis(Util.getMillis()) : entry.getTextureId();
+    private void blitImage(
+            GuiGraphicsExtractor graphics,
+            ImageEntry entry,
+            int x,
+            int y,
+            int size,
+            float opacity) {
+        Identifier textureId = entry.isAnimated()
+                ? entry.textureIdAtMillis(Util.getMillis())
+                : entry.getTextureId();
         if (textureId == null) {
             return;
         }
-        gfx.blit(
+        graphics.blit(
                 RenderPipelines.GUI_TEXTURED,
                 textureId,
                 x,
@@ -472,21 +647,95 @@ public final class EmojiPickerPopover {
                 ARGB.white(opacity));
     }
 
-    private Layout layout(int screenWidth, int screenHeight, int anchorX, int anchorY, int anchorWidth) {
-        int w = Math.min(PANEL_W, Math.max(160, screenWidth - 8));
-        int h = Math.min(PANEL_H, Math.max(112, screenHeight - 48));
-        int desiredX = anchorX + Math.max(0, (anchorWidth - w) / 2);
-        int x0 = Math.clamp(desiredX, 4, Math.max(4, screenWidth - w - 4));
-        int y0 = anchorY - h - 4;
-        if (y0 < 4) {
-            y0 = Math.min(screenHeight - h - 4, anchorY + 18);
+    private Layout layout(
+            int screenWidth,
+            int screenHeight,
+            int anchorX,
+            int anchorY,
+            int anchorWidth) {
+        ChatAppearanceSnapshot appearance = ChatAppearanceRuntime.current();
+        Density density = Density.at(appearance);
+        RichChatBounds screen = new RichChatBounds(
+                SCREEN_MARGIN,
+                SCREEN_MARGIN,
+                Math.max(SCREEN_MARGIN, screenWidth - SCREEN_MARGIN),
+                Math.max(SCREEN_MARGIN, screenHeight - SCREEN_MARGIN));
+        RichChatBounds panel = ChatSurfaceController.state().frame().panelBounds();
+        int anchorCenterX = anchorX + Math.max(1, anchorWidth) / 2;
+        boolean anchoredToMergedPanel = !appearance.vanillaStyleInput()
+                && panel.contains(anchorCenterX, anchorY);
+        RichChatBounds available = anchoredToMergedPanel ? intersection(screen, panel) : screen;
+        if (available.width() <= 0 || available.height() <= 0) {
+            available = screen;
         }
-        y0 = Math.clamp(y0, 4, Math.max(4, screenHeight - h - 4));
-        return new Layout(x0, y0, w, h);
+
+        int panelWidth = Math.min(density.panelWidth(), available.width());
+        int panelHeight = Math.min(density.panelHeight(), available.height());
+        panelWidth = Math.max(Math.min(density.minimumPanelWidth(), available.width()), panelWidth);
+        panelHeight = Math.max(Math.min(density.minimumPanelHeight(), available.height()), panelHeight);
+        int desiredX = anchorX + Math.max(0, (anchorWidth - panelWidth) / 2);
+        int panelX = clampPosition(desiredX, available.left(), available.right() - panelWidth);
+        int preferredAboveY = anchorY - density.gap() - panelHeight;
+        int preferredBelowY = anchorY + density.anchorHeight() + density.gap();
+        int panelY;
+        if (preferredAboveY >= available.top()) {
+            panelY = preferredAboveY;
+        } else if (preferredBelowY + panelHeight <= available.bottom()) {
+            panelY = preferredBelowY;
+        } else {
+            panelY = clampPosition(preferredAboveY, available.top(), available.bottom() - panelHeight);
+        }
+
+        RichChatBounds panelBounds = RichChatBounds.ofSize(panelX, panelY, panelWidth, panelHeight);
+        int padding = Math.min(
+                density.padding(),
+                Math.max(1, Math.min(panelBounds.width(), panelBounds.height()) / 8));
+        int contentLeft = panelBounds.left() + padding;
+        int contentRight = Math.max(contentLeft + 1, panelBounds.right() - padding);
+        int searchHeight = Math.min(
+                density.searchHeight(),
+                Math.max(1, panelBounds.height() - padding * 2));
+        RichChatBounds search = new RichChatBounds(
+                contentLeft,
+                panelBounds.top() + padding,
+                contentRight,
+                panelBounds.top() + padding + searchHeight);
+        int tabTop = Math.min(panelBounds.bottom() - padding, search.bottom() + density.gap());
+        int tabHeight = Math.min(density.tabHeight(), Math.max(1, panelBounds.bottom() - padding - tabTop));
+        RichChatBounds tabs = new RichChatBounds(contentLeft, tabTop, contentRight, tabTop + tabHeight);
+        int gridTop = Math.min(panelBounds.bottom() - padding, tabs.bottom() + density.gap());
+        RichChatBounds grid = new RichChatBounds(
+                contentLeft,
+                gridTop,
+                contentRight,
+                Math.max(gridTop, panelBounds.bottom() - padding));
+        RichChatBounds preview = previewBounds(panelBounds, screen, density);
+        return new Layout(appearance, density, panelBounds, search, tabs, grid, preview);
+    }
+
+    private RichChatBounds previewBounds(
+            RichChatBounds panel,
+            RichChatBounds screen,
+            Density density) {
+        int width = Math.min(density.previewWidth(), screen.width());
+        int height = Math.min(density.previewHeight(), screen.height());
+        int rightX = panel.right() + density.gap();
+        int leftX = panel.left() - density.gap() - width;
+        int x;
+        if (rightX + width <= screen.right()) {
+            x = rightX;
+        } else if (leftX >= screen.left()) {
+            x = leftX;
+        } else {
+            return RichChatBounds.ofSize(0, 0, 0, 0);
+        }
+        int y = clampPosition(panel.top(), screen.top(), screen.bottom() - height);
+        return RichChatBounds.ofSize(x, y, width, height);
     }
 
     private int columns(Layout layout) {
-        return Math.max(1, (layout.gridW + GAP) / (CELL + GAP));
+        int rowStep = layout.density().rowStep();
+        return Math.max(1, (layout.gridBounds().width() + layout.density().gap()) / rowStep);
     }
 
     private int rows(EmojiCatalog.Group group, Layout layout) {
@@ -495,21 +744,27 @@ public final class EmojiPickerPopover {
     }
 
     private double maxGridScroll(EmojiCatalog.Group group, Layout layout) {
-        int contentH = rows(group, layout) * (CELL + GAP) - GAP;
-        return Math.max(0.0D, contentH - layout.gridH);
+        int contentHeight = Math.max(
+                0,
+                rows(group, layout) * layout.density().rowStep() - layout.density().gap());
+        return Math.max(0.0D, contentHeight - layout.gridBounds().height());
     }
 
     private double maxGroupScroll(List<EmojiCatalog.Group> groups, Layout layout) {
-        Font font = net.minecraft.client.Minecraft.getInstance().font;
+        Font font = Minecraft.getInstance().font;
         int width = 0;
         for (EmojiCatalog.Group group : groups) {
-            width += tabWidth(font, group) + GAP;
+            width += tabWidth(font, group, layout.density()) + layout.density().gap();
         }
-        return Math.max(0.0D, width - GAP - (layout.tabX1 - layout.tabX0));
+        width = Math.max(0, width - layout.density().gap());
+        return Math.max(0.0D, width - layout.tabBounds().width());
     }
 
-    private int tabWidth(Font font, EmojiCatalog.Group group) {
-        return Math.clamp(font.width(group.name()) + 12, 42, 76);
+    private int tabWidth(Font font, EmojiCatalog.Group group, Density density) {
+        return Math.clamp(
+                font.width(group.name()) + density.tabTextPadding() * 2,
+                density.minimumTabWidth(),
+                density.maximumTabWidth());
     }
 
     private String trim(Font font, String text, int width) {
@@ -520,61 +775,94 @@ public final class EmojiPickerPopover {
         return font.plainSubstrByWidth(text, Math.max(1, width - ellipsis)) + "…";
     }
 
-    private double clamp(double value, double min, double max) {
-        return Math.max(min, Math.min(max, value));
+    private RichChatBounds intersection(RichChatBounds first, RichChatBounds second) {
+        return new RichChatBounds(
+                Math.max(first.left(), second.left()),
+                Math.max(first.top(), second.top()),
+                Math.min(first.right(), second.right()),
+                Math.min(first.bottom(), second.bottom()));
     }
 
-    private boolean inside(double px, double py, int x0, int y0, int x1, int y1) {
-        return px >= x0 && px < x1 && py >= y0 && py < y1;
+    private int clampPosition(int value, int minimum, int maximum) {
+        return maximum <= minimum ? minimum : Math.clamp(value, minimum, maximum);
+    }
+
+    private double clamp(double value, double minimum, double maximum) {
+        return Math.max(minimum, Math.min(maximum, value));
     }
 
     private record Layout(
-            int x0,
-            int y0,
-            int w,
-            int h,
-            int x1,
-            int y1,
-            int searchX0,
-            int searchY0,
-            int searchX1,
-            int searchY1,
-            int tabX0,
-            int tabY0,
-            int tabX1,
-            int tabY1,
-            int gridX0,
-            int gridY0,
-            int gridX1,
-            int gridY1,
-            int gridW,
-            int gridH) {
-        Layout(int x0, int y0, int w, int h) {
-            this(
-                    x0,
-                    y0,
-                    w,
-                    h,
-                    x0 + w,
-                    y0 + h,
-                    x0 + PAD,
-                    y0 + PAD,
-                    x0 + w - PAD,
-                    y0 + PAD + SEARCH_H,
-                    x0 + PAD,
-                    y0 + PAD + SEARCH_H + GAP,
-                    x0 + w - PAD,
-                    y0 + PAD + SEARCH_H + GAP + TAB_H,
-                    x0 + PAD,
-                    y0 + PAD + SEARCH_H + GAP + TAB_H + GAP,
-                    x0 + w - PAD,
-                    y0 + h - PAD,
-                    w - PAD * 2,
-                    h - PAD * 2 - SEARCH_H - TAB_H - GAP * 2);
+            ChatAppearanceSnapshot appearance,
+            Density density,
+            RichChatBounds panelBounds,
+            RichChatBounds searchBounds,
+            RichChatBounds tabBounds,
+            RichChatBounds gridBounds,
+            RichChatBounds previewBounds) {
+    }
+
+    private record Density(
+            int panelWidth,
+            int panelHeight,
+            int minimumPanelWidth,
+            int minimumPanelHeight,
+            int padding,
+            int tabHeight,
+            int searchHeight,
+            int cellSize,
+            int gap,
+            int previewWidth,
+            int previewHeight,
+            int previewImageSize,
+            int radius,
+            int borderWidth,
+            int itemBorderWidth,
+            int imageInset,
+            int tabTextPadding,
+            int minimumTabWidth,
+            int maximumTabWidth,
+            int anchorHeight,
+            int tabScrollStep,
+            int gridScrollStep,
+            int scrollbarWidth,
+            int scrollbarInset,
+            int minimumThumbHeight) {
+        private static Density at(ChatAppearanceSnapshot appearance) {
+            int scalePercent = Math.clamp(appearance.contextMenu().scalePercent(), 75, 150);
+            return new Density(
+                    scale(BASE_PANEL_WIDTH, scalePercent),
+                    scale(BASE_PANEL_HEIGHT, scalePercent),
+                    scale(BASE_MIN_PANEL_WIDTH, scalePercent),
+                    scale(BASE_MIN_PANEL_HEIGHT, scalePercent),
+                    scale(BASE_PADDING, scalePercent),
+                    scale(BASE_TAB_HEIGHT, scalePercent),
+                    scale(BASE_SEARCH_HEIGHT, scalePercent),
+                    scale(BASE_CELL_SIZE, scalePercent),
+                    scale(BASE_GAP, scalePercent),
+                    scale(BASE_PREVIEW_WIDTH, scalePercent),
+                    scale(BASE_PREVIEW_HEIGHT, scalePercent),
+                    scale(BASE_PREVIEW_IMAGE_SIZE, scalePercent),
+                    Math.max(0, appearance.cornerRadius()),
+                    Math.max(0, appearance.contextMenu().borderWidth()),
+                    1,
+                    scale(3, scalePercent),
+                    scale(6, scalePercent),
+                    scale(42, scalePercent),
+                    scale(76, scalePercent),
+                    scale(18, scalePercent),
+                    scale(28, scalePercent),
+                    scale(18, scalePercent),
+                    scale(2, scalePercent),
+                    scale(2, scalePercent),
+                    scale(14, scalePercent));
         }
 
-        static Layout empty() {
-            return new Layout(0, 0, 0, 0);
+        private int rowStep() {
+            return cellSize + gap;
+        }
+
+        private static int scale(int value, int percent) {
+            return Math.max(1, Math.round(value * percent / 100.0F));
         }
     }
 }
